# python-cookiecutter

./: .gitignore  .pre-commit-config.yaml  README.md  contributing.html  cookiecutter.json  genindex.html  index.html  infrastructure.html  objects.inv  project_setup.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/workflows/: README.md  cookiecutter_docs.yml  deployment_workflow.yml  docs_build_and _deploy.yml  test.yml  test_and_deploy.yml  trigger_scheduled_test.yml
_sources/: contributing.md.txt  project_setup.md.txt
_static/css/: custom.css
docs/: CNAME  requirements.txt
docs/source/: conf.py  contributing.md  contributing.rst  documentation.md  documentation.rst  get_started.md  getting_started.rst  github_actions_setup.md  github_actions_setup.rst  index.md  index.rst  infrastructure.md  modules.md  modules.rst  pre_commits.md  pre_commits.rst  project_setup.md  project_setup.rst  versioning.md  versioning.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: footer_end.html  footer_start.html  navbar.html  search-field.html  sidebar-nav.html
hooks/: post_gen_project.py
test-cookiecutter/: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
test-cookiecutter/test_cookiecutter/: __init__.py
tests/: cookiecutter_test_configs.yaml  test_cookiecutter.py  test_cookiecutter_.yaml
{{cookiecutter.package_name}}/: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: check_docs.yml  docs_build_and_deploy.yml  publish_docs.yml  test_and_deploy.yml
{{cookiecutter.package_name}}/docs/: requirements.txt
{{cookiecutter.package_name}}/docs/source/: api_index.rst  conf.py  getting_started.md  index.rst
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/: __init__.py  greetings.py  math.py
