[project]
name = "{{cookiecutter.package_name}}"
authors = [{name = "{{cookiecutter.full_name}}", email= "{{cookiecutter.email}}"}]
description = "{{cookiecutter.short_description}}"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]

{% if cookiecutter.license == "MIT" -%}
license = {text = "{{cookiecutter.license}}"}
{%- elif cookiecutter.license == "BSD-3" -%}
license = {text = "BSD-3-Clause"}
{%- elif cookiecutter.license == "GNU GPL v3.0" -%}
license = {text = "GPL-3.0-only"}
{%- elif cookiecutter.license == "GNU LGPL v3.0" -%}
license = {text = "LGPL-3.0-only"}
{%- elif cookiecutter.license == "Apache Software License 2.0" -%}
license = {text = "Apache-2.0"}
{%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
license = {text = "MPL-2.0"}
{%- endif %}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    {% if cookiecutter.license == "MIT" -%}
    "License :: OSI Approved :: MIT License",
    {%- elif cookiecutter.license == "BSD-3" -%}
    "License :: OSI Approved :: BSD License",
    {%- elif cookiecutter.license == "GNU GPL v3.0" -%}
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    {%- elif cookiecutter.license == "GNU LGPL v3.0" -%}
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    {%- elif cookiecutter.license == "Apache Software License 2.0" -%}
    "License :: OSI Approved :: Apache Software License",
    {%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    {%- endif %}
]

{% if cookiecutter.github_repository_url != 'provide later' -%}
[project.urls]
"Homepage" = "{{ cookiecutter.github_repository_url }}"
"Bug Tracker" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}/issues"
{% if cookiecutter.create_docs == "yes" -%}
"Documentation" = "https://{{cookiecutter.github_username_or_organization}}.github.io/{{cookiecutter.package_name}}"
{% elif cookiecutter.create_docs == "no" -%}
"Documentation" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}"
{%- endif %}
"Source Code" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}"
"User Support" = "https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}/issues"
{%- endif %}

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["{{cookiecutter.module_name}}*"]
{% if cookiecutter.create_docs == "yes" -%}
exclude = ["tests", "docs*"]
{% elif cookiecutter.create_docs == "no" -%}
exclude = ["tests*"]
{%- endif %}

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.module_name}}"

[tool.black]
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
{% if cookiecutter.create_docs == "yes" -%}
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]
{% elif cookiecutter.create_docs == "no" -%}
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
]
{%- endif %}

[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov={{cookiecutter.module_name}} --cov-report=xml
"""
